@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" datatype="plaintext" original="messages" date="2019-10-03T13:44:46Z" product-name="macina_searchbox">
+		<header/>
+		<body>
+			<trans-unit id="headline" xml:space="preserve">
+				<source>Search &amp; Find</source>
+			</trans-unit>
+			<trans-unit id="advanced" xml:space="preserve">
+				<source>advanced search</source>
+			</trans-unit>
+			<trans-unit id="submit" xml:space="preserve">
+				<source>search</source>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
